crates/jolt_cli/tests/snapshots/cli_snapshots__format_with_errors_formats_and_writes_recovered_parse.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 0
stdout:
<empty>
stderr:
Formatted 1 file in $TIME
files:
-- A.java --
class {
