crates/jolt_cli/tests/snapshots/cli_snapshots__invalid_flags_report_usage_errors.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 2
stdout:
<empty>
stderr:
error: invalid value '0' for '--threads <THREADS>': number would be zero for non-zero type

For more information, try '--help'.
files:
<none>
