crates/jolt_cli/tests/snapshots/cli_snapshots__manpage_generates_roff_document.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt 1  "jolt 0.20260705.0 (a218225)" 
.SH NAME
jolt \- Fast, opinionated JVM and Kotlin Multiplatform project tooling.
.SH SYNOPSIS
\fBjolt\fR [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
.SH DESCRIPTION
Fast, opinionated JVM and Kotlin Multiplatform project tooling.
.SH OPTIONS
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
.TP
\fB\-V\fR, \fB\-\-version\fR
Print version
.SH SUBCOMMANDS
.TP
jolt\-format(1)
Format source files
.TP
jolt\-config(1)
Inspect Jolt configuration
.TP
jolt\-completions(1)
Generate shell completions
.TP
jolt\-manpage(1)
Generate a roff manpage
.TP
jolt\-help(1)
Print this message or the help of the given subcommand(s)
.SH VERSION
v0.20260705.0 (a218225)
stderr:
<empty>
files:
<none>
