crates/jolt_cli/tests/snapshots/cli_snapshots__manpage_help_describes_roff_output.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
Generate a roff manpage

Usage: jolt manpage

Options:
  -h, --help  Print help
stderr:
<empty>
files:
<none>
