crates/jolt_cli/tests/snapshots/cli_snapshots__recovered_parse_formats_and_writes_file.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 0
stdout:
<empty>
stderr:
Formatted 1 file in $TIME
files:
-- A.java --
class  {
