crates/jolt_cli/tests/snapshots/cli_snapshots__stdin_recovered_parse_formats_to_stdout.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
class  {

stderr:
<empty>
files:
<none>
