crates/jolt_cli/tests/snapshots/cli_snapshots__stdin_syntax_error_is_rejected_without_stdout.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 1
stdout:
<empty>
stderr:
src/Main.java:1:7: java.parse.expected_syntax: expected type name
formatting failed
files:
<none>
