crates/jolt_cli/tests/snapshots/cli_snapshots__syntax_error_is_rejected_without_writing_file.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 1
stdout:
<empty>
stderr:
A.java:1:7: java.parse.expected_syntax: expected type name
formatting failed
files:
-- A.java --
class {
