crates/jolt_cli/tests/snapshots/cli_snapshots__top_level_help_describes_product_cli.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
Fast, opinionated JVM and Kotlin Multiplatform project tooling.

Usage: jolt <COMMAND>

Commands:
  format       Format source files [aliases: fmt]
  completions  Generate shell completions
  manpage      Generate a roff manpage
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
stderr:
<empty>
files:
<none>
